# Projects-On-Python

.devcontainer/: devcontainer.json
whatsapp-chat-analyzer/: .gitignore  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_dashboard.bat  setup.py  streamlit_app.py
whatsapp-chat-analyzer/data/sample/: sample_chat.txt
whatsapp-chat-analyzer/src/whatsapp_analyzer/: __init__.py  analyzer.py  app.py  group_analyzer.py  parser.py  requirements.txt  visualizer.py
whatsapp-chat-analyzer/tests/: __init__.py  test_analyzer.py  test_parser.py
